change title and put link on logo

--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,10 @@ body {
 	font-weight: bold;
 	margin: 0px;
 }
+.website-header a {
+	text-decoration: none;
+	color: white;
+}
 
 /* main */
 .apps {
